bedita-app/webroot/css/bedita.css
/* ... */
.ico_rss {background-image: url('../img/iconset/24px/rss.png');}
.ico_rss.on {background-image: url('../img/iconset/24px/rss-on.png');}
.ico_application {background-image: url('../img/iconset/24px/application.png');}

/*...........................................    

    Forms

...........................................*/


INPUT, TEXTAREA, SELECT {
	padding:2px;
}
INPUT[type=text], INPUT[type=file], INPUT[type=search], TEXTAREA {
	border:1px solid silver;
}

INPUT[type=checkbox] {
	vertical-align:middle;
}

input[type=radio] {
	margin-right:5px; vertical-align:middle;
}

input[type=radio] {
	margin-right:5px; vertical-align:middle;
}

INPUT[readonly] {
	color:gray;
	background-color:#dedede;
}


label {font-weight:bold;}

label.block {display:block; margin-top:4px; margin-bottom:2px}

fieldset {border:0}

textarea {
	overflow:auto;
}

textarea#description, textarea#title, textarea#addtaglist, textarea.longtext, textarea.mce, textarea.mceSimple {
	width:640px; 
}

input#titleBEObject, input#title, textarea.subtitle {
	width:380px;
}

#title input#titleBEObject, input#title, textarea.subtitle {
	width:460px;
}


input#titleBEObject {
	padding:5px 0px 5px 5px; font-size:1.25em;
}

INPUT.priority {
	text-align:center; 
	margin-left: 0px; 
	margin-right:0px; width:35px;
	background-color:transparent
}

INPUT.objectCheck {
	margin-top:5px;
	
}


INPUT[type=text],INPUT[type=password], textarea {	
	border-radius : 7px; 
	-moz-border-radius : 7px; 
	-webkit-border-radius : 7px;
	-khtml-border-radius: 7px;
	border:1px solid silver;
}

#pwd, #pwdagain, INPUT[type=password] {
	letter-spacing:2px;	
}

INPUT.big {
	font-size:1.315em;
}

INPUT[type=button], INPUT[type=submit], button  {
	text-transform:uppercase;
}


/*...........................................    

    Buttons

...........................................*/

A.BEbutton  {
	padding:4px 8px 4px 8px !important;
}


.bemaincommands {
	width:100px !important;
	display:block; 
	margin:5px auto;
}

.bemaincommands, .modalbutton, .BEbutton, input[type=submit], input[type=button], button {
	/* background:#F2F2F2 url(../images/BEbutton_dark.gif) repeat-x scroll left top; */
	background-color:#F2F2F2;
	line-height:1.2em;
	border-color:#BBBBBB;
	color:#333;
	
	-moz-border-radius:9px;
	border-radius : 9px; 
	-webkit-border-radius : 9px;
	-khtml-border-radius: 9px;
	-moz-box-sizing:content-box;
	
	border-style:solid;
	border-width:1px;
	cursor:pointer;
	line-height:16px;
	padding:2px 5px;
	text-decoration:none;
}

input[type=submit]:hover, input[type=button]:hover, A.BEbutton:hover, button:hover {
	background-color:#666;
	color:#FFF;
	outline:0px;
}

*[disabled] {
	opacity:0.4;	
}

*[disabled]:hover {
	background-color:#F2F2F2 !important;
	color:#333 !important;
}

:focus { outline: none; }
:active { outline: none; }


/*...........................................    

    footer

...........................................*/

#footerPage {position:absolute; top:600px; left:20px; width:160px;}


/*...........................................    

    messages

...........................................*/

#messagesDiv {
	/*background:transparent url(../img/shadowpattern160.png);*/
	top:20px; 
	left:20px;
	position: fixed !important;
	z-index:9999;
	line-height:1.2em;
}
			
.message {
	width:120px; height:120px; 
	padding:10px;
	background-color:#333;
	color:#FFF;
}

.message .close {
	margin-top:10px; color:#FFF; display:block;
}

.messageDetail {
	width:340px; 
	min-height:120px; 
	padding:10px;
	background-color:#FFF;
	color:#000;
	position:absolute !important;
	left:140px;
	top:0px
}


.message.error H2 {
	color:red;
}

.message.warn H2 {
  	color:gold;
}

.message.info H2 {
	color:#996600;
}

.message LABEL {
	display:block;
}


/*...........................................    

    Tags

...........................................*/

.tag {
	font-size:1em;
	font-weight: normal;
	line-height:1.2em;
}

.tag A:Hover {
	text-decoration:underline;
}

.tagToolbar {
	cursor:pointer;
	vertical-align:middle;
}

.smallestTag {
	font-size:1em;
}

.smallTag {
	font-size:1.2em;
}

.mediumTag {
	font-size:1.4em;
}


.largeTag {
	font-size:1.8em;
}

.largestTag {
	font-size:2.2em;
}

/*...........................................    

    Ajax

...........................................*/


#loading, .loader {
	background: transparent url(../img/loadingAnimation.gif) no-repeat top center;
	display:none;
	min-height:48px;
	min-width:48px;
}

.modaloader {
	background: transparent url(../img/loadingAnimation.gif) no-repeat center !important;
}


/*...........................................    

    Modal

...........................................*/

#modaloverlay {
	position:fixed;
	height:100%;
	width:100%;
	top:0px;
	left:0px;
	background-color:black;
	/*opacity:0.8;*/
	z-index:499;
	display:none;

}

#modal {
	position:absolute;
	top:20px;
	left:300px;
	background-color: #FFFFFF;
	width:660px;
	/*height:550px;*/
	display:none;
	z-index:500;
	/*overflow:hidden;*/
	border-radius : 22px; 
	-moz-border-radius : 22px; 
	-webkit-border-radius : 22px;
	-khtml-border-radius: 22px;
}

#modalmain {
	width:100%;
	/*min-height:525px;*/
	/*overflow-y:auto;*/
	/*overflow-x:hidden;*/
	/*background: transparent url(../img/shadowsimple.png) repeat-x;*/
	margin-bottom:30px;
}

#modalmain .body {
	padding:10px;
	/*min-height:505px;*/
	
}

.modalcommands {
	padding:10px; margin-top:0px; text-align:center; 
	background-color:#FFFFFF;
}

#modalheader {
	background-color:#000000;
	/*width:480px;*/
	height:21px;
	padding-top:5px;
	padding-right:20px;
	text-align:right;
	color:white;
	cursor:move;
	border-bottom:1px solid gray;
}

#modalheader:Hover {
	background-color:#333;
}

#modalheader A {
	color:white;
	cursor:pointer;
}

/*...........................................    

    Specific template layout: home

...........................................*/

.home UL.modules {
	margin:0px; 
	border:0px solid green; 
	width:auto !important
}
/* ... */

